--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "json-server --watch db.json",
+    "serve": "json-server -p 3001 --watch db.json",
     "predeploy": "react-scripts build",
     "deploy": "gh-pages -d build"
   },
